# seismo-mcp

./: .gitignore  README.md  pyproject.toml
docs/: DESIGN.md  INSTALL.md
examples/: _test_cwp_su_mcp.py  _test_gmt_mcp.py  _test_obspy_mcp.py  _test_sac_mcp.py
